chore: remove preview arguments from Maven plugins in pom.xml